@@ -23,7 +23,11 @@ class EnumExporter(Exporter):
             in_indent = self.INDENT*2
             rename = self.info.rename or self.enum.name
             full_name = self.enum.FullName()
-            code = indent + namespaces.python + 'enum_< %s >("%s")\n' % (full_name, rename)
+            if rename == "$_0" or rename == '._0':
+                full_name = "int"
+                rename = "unnamed"
+            code = indent + namespaces.python
+            code += 'enum_< %s >("%s")\n' % (full_name, rename)
             for name in self.enum.values:         
                 rename = self.info[name].rename or name
                 value_fullname = self.enum.ValueFullName(name)
