@@ -37,7 +37,7 @@ from policies import *
 from CppParser import CppParser, CppParserError
 import time
 
-__VERSION__ = '0.9.0'
+__VERSION__ = '0.9.1'
 
 def RecursiveIncludes(include):
     'Return a list containg the include dir and all its subdirectories'
