@@ -19,6 +19,11 @@ struct X
     }
 };
 
+enum {
+    x = 0,
+    y = 1
+};
+
 }
 
 #endif
