@@ -1,8 +1,7 @@
-color = Enum('enums::color', 'enums.h')
-rename(color.red, 'Red')
-rename(color.blue, 'Blue')
-X = Class('enums::X', 'enums.h')
-rename(X.choices.bad, 'Bad')
-rename(X.choices.good, 'Good')
-rename(X.choices, 'Choices')
+h = AllFromHeader('enums.h')
+rename(h.color.red, 'Red')
+rename(h.color.blue, 'Blue')
+rename(h.X.choices.bad, 'Bad')
+rename(h.X.choices.good, 'Good')
+rename(h.X.choices, 'Choices')
 
